# Datev-OCR-AI

./: app.py  automation.py  core.py  pyproject.toml  rdp_automation_config.json
datev_ocr/: __init__.py  app.py  config.py  ocr_preprocessing.py
datev_ocr/ui/: __init__.py
datev_ocr_ai.egg-info/: PKG-INFO  SOURCES.txt
ui/: main_window.py
